--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "json-server": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "json-server": "^1.0.0-beta.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1",
-    "the-new-css-reset": "^1.11.3"
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
