--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.55.4",
+    "@tanstack/react-query-devtools": "^5.55.4",
     "axios": "^1.7.7",
     "json-server": "^1.0.0-beta.2",
     "react": "^18.3.1",
